# termites_ros

./: README.md
hardware_rule/: 20-termite-devices.rules  hardware-rule.md  setRule.sh
termite_msgs/: CMakeLists.txt  package.xml
termite_msgs/msg/: Termite.msg
termites_ros/: CMakeLists.txt  package.xml
termites_ros/scripts/: termite_control.py  termite_test.py
